# django-sorting-field

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
django_sorting_field/: fields.py  utils.py  widgets.py
django_sorting_field/static/sorting/css/: sorting_widget.css
django_sorting_field/static/sorting/js/: sorting_widget.js
django_sorting_field/templates/sorting/widgets/: sorting_widget.html
django_sorting_field_tests/: test_utils.py
