[metadata]
name = django-sorting-field
version = 1.0.1.post+gitver
description = Django Sorting Field
long_description = file: README.rst
license = MIT
license_file = LICENSE
keywords = sorting, field, django

[options]
include_package_data = True
packages = find:
install_requires =
    django

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,build,dist,migrations,doc/*
max-complecity = 10

[isort]
not_skip=__init__.py
skip=.tox,build,migrations
known_first_party=django_sorting_field
known_third_party=django,pytest,six
multi_line_output=4
